--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,26 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sometimes I have to post something
+title: Sometimes you have to post
 email: aleksandrbazhin@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Aleksandr Bazhin's page with memos and projects
+  Aleksandr Bazhin's site with memos and projects
 baseurl: "" # the subpath of your site, e.g. /blog
-# twitter_username: jekyllrb
+twitter_username: AleksandrBazhi2
 github_username:  aleksandrbazhin
 
 domain: aleksandrbazhin.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://aleksandbazhin.github.io
 # Build settings
 theme: minima
+minima:
+  skin: dark
 plugins:
   - jekyll-feed
+kramdown:
+  input: GFM
+  gfm_quirks: [paragraph_end]
+  syntax_highlighter: coderay
 
 # Exclude from processing.
 # The following items will not be processed, by default.
