--- a/_config.yml
+++ b/_config.yml
@@ -21,23 +21,27 @@
 title: Sometimes you have to post
 email: aleksandrbazhin@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Aleksandr Bazhin's site with memos and projects
+  It's my personal site with memos and projects
 baseurl: "" # the subpath of your site, e.g. /blog
-twitter_username: AleksandrBazhi2
-github_username:  aleksandrbazhin
-
 domain: aleksandrbazhin.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://aleksandbazhin.github.io
 # Build settings
 theme: minima
 minima:
   skin: dark
+  twitter_username: AleksandrBazhi2
+  github_username:  aleksandrbazhin
+
 plugins:
   - jekyll-feed
 kramdown:
   input: GFM
   gfm_quirks: [paragraph_end]
   syntax_highlighter: coderay
+  # syntax_highlighter: rouge
+# highlighter: rouge  
+  
+  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
